--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for sudo
 
 - name: Validate provided variables and set os dependent variables
-  import_tasks: asserts.yml
+  ansible.builtin.import_tasks: asserts.yml
 
 - name: Import tasks to configure SUDO
-  import_tasks: sudo.yml
+  ansible.builtin.import_tasks: sudo.yml
